corrected routes in layout view

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,7 +14,7 @@ html
       .contents
         ul
           li.f
-            a(href="/notes/month") JULY 2011
+            a(href="/category/JULY%202011") JULY 2011
     section#bar
       .contents
         nav
@@ -37,7 +37,7 @@ html
     
     ul#file-menu(class="menu-list", style="display:none")
       li
-        a(href="/Notes/new") New
+        a(href="/new") New
       li
         a(href="#") Save
     ul#edit-menu(class="menu-list", style="display:none")
