--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -7,6 +7,9 @@
 input:focus
   outline none
 
+[contenteditable="true"]:focus
+  outline none
+
 html
   background #999 url(/images/backgrounds/smallripples.png) 0 0
   //position fixed
