oneEdit jquery plugin (wip)

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,6 +7,8 @@ html
     script(src="/javascripts/lib/socket.io/socket.io.js")
     script(src='/javascripts/lib/jquery-1.4.2.min.js')
     script(src="/javascripts/lib/jquery-ui-1.8rc3.custom.min.js")
+    script(src="/javascripts/lib/plugins/jquery.textselect.js")
+    script(src="/javascripts/lib/jquery.oneEdit-1.0.0.js")
     script(src="/javascripts/lib/Plugins/jquery.tmpl.min.js")
     script(src="/javascripts/main.js")
   body
