--- a/views/new.jade
+++ b/views/new.jade
@@ -1,5 +1,5 @@
 h1.Empty(contenteditable="true") New Title
 span.date(contenteditable="true")=date
 span.time(contenteditable="true")=time
-span(contenteditable="true") Click to Edit
+div#bodytext(contenteditable="true") Click to Edit
 
