--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -210,3 +210,26 @@ section * {
   right: 15px;
   font-style: italic;
 }
+.bold {
+  font-weight: bold;
+}
+.oneformat {
+  z-index: 1050;
+  border: 1px solid #e1e1e1;
+  border-radius: 5px;
+  background-color: #fff;
+  -webkit-box-shadow: 0px 0px 8px rgba(0,0,0,0.3);
+  -moz-box-shadow: 0px 0px 8px rgba(0,0,0,0.3);
+  box-shadow: 0px 0px 8px rgba(0,0,0,0.3);
+  color: #111;
+}
+.oneformat ul li {
+  float: left;
+  list-style: none;
+  width: 15px;
+  height: 15px;
+  text-align: center;
+  padding: 2px;
+  border-left: 1px solid #e1e1e1;
+  cursor: default !important;
+}
