--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,4 +1,13 @@
-// # BLOCLK LEVEL STYLES
+/*
+
+____________________________________________
+\\\|///
+ \\|//   stylus writes better css
+  \|/
+   |
+
+
+*/
 *
   margin 0
   padding 0
