--- a/views/layout.jade
+++ b/views/layout.jade
@@ -50,5 +50,5 @@ html
       li.hr
       li
         a(href="#") Preferences...
-    #search Search
+    #search(style="display:none") Search
       input(name="search")
