--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -50,6 +50,7 @@ sub {
   position: fixed;
   height: 100%;
   background: #dee4ea;
+  display: none;
   top: 46px;
   left: 0;
   z-index: 98;
@@ -57,7 +58,6 @@ sub {
   border-left: none;
 }
 #main {
-  left: 180px;
   position: relative;
   top: 26px;
   background: Transparent;
@@ -76,9 +76,9 @@ sub {
   height: 25px;
   width: 100%;
   top: 0;
-  -webkit-box-shadow: 0px 0px 10px rgba(0,0,0,0.30);
-  -moz-box-shadow: 0px 0px 10px rgba(0,0,0,0.30);
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.30);
+  -webkit-box-shadow: 0px 0px 15px rgba(0,0,0,0.30);
+  -moz-box-shadow: 0px 0px 15px rgba(0,0,0,0.30);
+  box-shadow: 0px 0px 15px rgba(0,0,0,0.30);
 }
 #nav * {
   color: #222;
@@ -92,9 +92,10 @@ sub {
 }
 #bar li {
   float: left;
-  letter-spacing: 1px;
 }
-#bar li a {
+#bar li a,
+#bar span {
+  letter-spacing: 1px;
   padding: 5px 10px;
   display: block;
   cursor: default;
@@ -108,9 +109,8 @@ section#bar .contents {
   padding: 0px 15px 0px 15px;
 }
 section#bar .icon {
+  padding: 0 3 x;
   float: right;
-  width: 25px;
-  height: 25px;
 }
 section#nav .contents {
   padding: 5px 10px;
@@ -120,40 +120,69 @@ section * {
   text-decoration: none;
 }
 .boxshadow {
-  -webkit-box-shadow: 0px 0px 10px rgba(0,0,0,0.30);
-  -moz-box-shadow: 0px 0px 10px rgba(0,0,0,0.30);
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.30);
+  -webkit-box-shadow: 0px 0px 15px rgba(0,0,0,0.30);
+  -moz-box-shadow: 0px 0px 15px rgba(0,0,0,0.30);
+  box-shadow: 0px 0px 15px rgba(0,0,0,0.30);
 }
 .rounded {
   border-radius: 3px;
 }
-.icon.search {
-  padding-bottom: 1px;
-  background: url("/images/search-hover.png") 6px 6px no-repeat;
-  background-size: 60%;
+.hide {
+  display: none;
+}
+hr {
+  height: 1px;
+  padding: 0;
+  background: #ccc;
+  margin: 5px 1px;
+  border: none;
+}
+.icon.search span {
+  background: url("/images/icons/search_zoom_black.png") 2px 3px no-repeat;
+  background-size: 82%;
   cursor: default;
+  opacity: 0.85;
 }
-.icon.search.active {
-  background-image: url("/images/search.png");
+.icon.tags span {
+  background: url("/images/icons/tag_black.png") 2px 3px no-repeat;
+  background-size: 82%;
+  cursor: default;
+  opacity: 0.85;
 }
-#bar a.active {
+#bar span.text {
+  font-weight: bold;
+}
+.icon.search.active span {
+  background: url("/images/icons/search_zoom_white.png") 2px 3px no-repeat;
+}
+.icon.tags.active span {
+  background: url("/images/icons/tag_white.png") 2px 3px no-repeat;
+}
+#bar a.active,
+#bar .active .text {
   background: #06f;
   background: -moz-linear-gradient(top, #6ca6d8 0%, #1e6cb4 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #6ca6d8), color-stop(100%, #1e6cb4));
   color: #fff;
   text-shadow: 0 1px 0 #333;
 }
-#search {
-  padding: 5px 5px 5px 15px;
+.menu-window {
+  padding: 5px 15px 5px 15px;
   position: fixed;
   right: 15px;
   top: 25px;
-  background: #06f;
+  background: -moz-linear-gradient(top, #6ca6d8 0%, #1e6cb4 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #6ca6d8), color-stop(100%, #1e6cb4));
   color: #fff;
   font-weight: bold;
   z-index: 1000;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  -webkit-box-shadow: 0px 0px 15px rgba(0,0,0,0.30);
+  -moz-box-shadow: 0px 0px 15px rgba(0,0,0,0.30);
+  box-shadow: 0px 0px 15px rgba(0,0,0,0.30);
 }
-#search input {
+.menu-window input {
   margin-left: 20px;
   width: 200px;
   padding: 2px 7px;
@@ -161,6 +190,61 @@ section * {
   font-size: 12px;
   border-radius: 10px;
   border: none;
+}
+.menu-window div {
+  padding: 5px 0;
+}
+.menu-window .text {
+  display: inline-block;
+  padding: 4px;
+  color: #fff;
+  font-weight: normal;
+  text-shadow: #999 0 0.5px 0;
+  text-decoration: none;
+}
+.menu-window .text:hover {
+  color: #555;
+  border-radius: 2px;
+  background: #eff3fb;
+  cursor: default !important;
+}
+.menu-window label {
+  color: #fff;
+  display: inline-block;
+  width: 70px;
+}
+span.mark {
+  visibility: hidden;
+  display: inline-block;
+  width: 20px;
+  height: 18px;
+  margin-bottom: -4px;
+  background-size: 95%;
+  background: url("/images/icons/arrow_left_white.png") 5px 0px no-repeat;
+}
+span.mark.check {
+  background: url("/images/icons/heck_yes_ok_white.png") 5px 0px no-repeat;
+}
+#login .spin {
+  display: none;
+  position: absolute;
+  top: 23px;
+  left: 50px;
+}
+#login.loading .spin {
+  display: block;
+}
+#login.loading label {
+  visibility: hidden;
+}
+#signed-in img {
+  margin: 0 10px 10px 0;
+  float: left;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+  -webkit-box-shadow: 0px 0px 15px rgba(0,0,0,0.30);
+  -moz-box-shadow: 0px 0px 15px rgba(0,0,0,0.30);
+  box-shadow: 0px 0px 15px rgba(0,0,0,0.30);
 }
 .menu-list {
   z-index: 98;
@@ -173,9 +257,9 @@ section * {
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
   padding: 5px 0;
-  -webkit-box-shadow: 0px 0px 20px rgba(0,0,0,0.30);
-  -moz-box-shadow: 0px 0px 20px rgba(0,0,0,0.30);
-  box-shadow: 0px 0px 20px rgba(0,0,0,0.30);
+  -webkit-box-shadow: 0px 0px 15px rgba(0,0,0,0.30);
+  -moz-box-shadow: 0px 0px 15px rgba(0,0,0,0.30);
+  box-shadow: 0px 0px 15px rgba(0,0,0,0.30);
 }
 .menu-list li {
   list-style: none;
@@ -230,9 +314,9 @@ section * {
   border: 1px solid #e1e1e1;
   border-radius: 5px;
   background-color: #fff;
-  -webkit-box-shadow: 0px 0px 8px rgba(0,0,0,0.30);
-  -moz-box-shadow: 0px 0px 8px rgba(0,0,0,0.30);
-  box-shadow: 0px 0px 8px rgba(0,0,0,0.30);
+  -webkit-box-shadow: 0px 0px 15px rgba(0,0,0,0.30);
+  -moz-box-shadow: 0px 0px 15px rgba(0,0,0,0.30);
+  box-shadow: 0px 0px 15px rgba(0,0,0,0.30);
   color: #111;
 }
 .oneformat ul li {
