--- a/views/index.jade
+++ b/views/index.jade
@@ -1,1 +1,4 @@
-Hello
+h1.Empty(contenteditable="true") New Title
+span.date(contenteditable="true")=date
+span.time(contenteditable="true")=time
+div#bodytext(contenteditable="true") Click to Edit
