added localstorage sessionstorage save

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -49,7 +49,7 @@ sub {
   width: 180px;
   position: fixed;
   height: 100%;
-  background: #dee4ea;
+  background: #eee;
   display: none;
   top: 46px;
   left: 0;
