--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -59,7 +59,7 @@ h1 sup,sub
   width 180px
   position fixed
   height: 100%
-  background #dee4ea
+  background #eeeeee //#dee3e8 // #dee4ea
   display none
   //background #555 //#E5E5E5
   //background -webkit-gradient(linear, left top, right top, color-stop(0%,#555), color-stop(100%,#666))//#e7edf0
