--- a/views/new.jade
+++ b/views/new.jade
@@ -1,5 +1,4 @@
-h1.Empty(contenteditable="true") New Title
-span.date(contenteditable="true")=date
-span.time(contenteditable="true")=time
+h1#titletext.Empty(contenteditable="true") New Title
+span#datetext.date(contenteditable="true")=date
+span#timetext.time(contenteditable="true")=time
 div#bodytext(contenteditable="true") Click to Edit
-
