--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -27,8 +27,11 @@ input:focus
   outline none
 
 html
-  background #999 url(/images/backgrounds/SmallRipples.png) 0 0
+  background #999 url(/images/backgrounds/Pinstripe-med.jpg) 0 0
+  // background #444 url(/images/backgrounds/blue-stripes.jpeg) 50px 0
+  //background #444 url(/images/backgrounds/funny-circles.jpeg) 0 0
   background-attachment fixed
+  //background-size auto 100%
 
 body
   font 77% "Lucida Grande", "Trebuchet MS", Georgia, serif
@@ -210,6 +213,11 @@ hr
   border-radius 10px
   border none
 
+.menu-window input:focus
+  padding 2px 7px
+  border none
+
+
 .menu-window div
   padding 5px 0
 
@@ -260,7 +268,7 @@ span.mark.check
   visibility hidden
 
 //#signed-in span
-#signed-in img
+img.gravatar
   margin 0 10px 10px 0
   float left
   border-radius 3px
@@ -356,4 +364,50 @@ span.mark.check
 
 //.page *:hover
 //  outline #ccc dotted 1px
+
+.window
+  display none
+  top 26px
+  position fixed
+  padding 15px
+  //border-bottom-left-radius 5px
+  //border-bottom-right-radius 5px
+  //background -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ccc), color-stop(100%,#eee))//#e7edf0
+  //background -moz-linear-gradient(top, #ccc 0%, #eee 100%)
+  background #eee
+  box-shadow()
+  z-index 98
+  border 1px solid #ececec
+  border-top none
+
+.window .inner
+  position relative
+  top 0
+  left 0
+
+.window h2
+  margin-bottom 10px
+  clear both
+  display block
+
+.window .inner p
+  display block
+  font-size 13px
+  margin 0 0 10px
+
+
+.window .inner p.alignright
+  text-align right
+  margin-bottom 0
+  margin-top 15px
+
+.window .inner .col
+  float left
+
+.window label
+  display block
+  padding 0 0 3px 3px
+
+.window button
+  margin-left 5px
 
