--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,5 @@
-h1#titletext.Empty(contenteditable="true") New Title
-span#datetext.date(contenteditable="true")=date
-span#timetext.time(contenteditable="true")=time
-div#bodytext(contenteditable="true") Click to Edit
+input.data-field(type="hidden", data-name="id")
+h1.data-field#titletext.Empty(contenteditable="true", data-name="title") New Title
+span.data-field#datetext.date(contenteditable="true", data-name="date")=date
+span.data-field#timetext.time(contenteditable="true", data-name="time")=time
+div.data-field#bodytext(contenteditable="true", data-name="body") Click to Edit
