--- a/views/layout.jade
+++ b/views/layout.jade
@@ -57,7 +57,7 @@ html
       li
         a(href="#") Preferences...
     #search.menu-window(style="display:none") Search
-      input(name="search")
+      input(name="search", type="search")
     #tags.menu-window(style="display:none") Tags
       input(name="tags")
     #login.menu-window(style="display:none")
