--- a/public/stylesheets/button.css
+++ b/public/stylesheets/button.css
@@ -171,3 +171,45 @@ s3.amazonaws.com/37assets/svn/480-custom_forms.html */
       background: url("data:image/png,%89PNG%0D%0A%1A%0A%00%00%00%0DIHDR%00%00%008%00%00%008%08%02%00%00%00'%E4%ACI%00%00%00%19tEXtSoftware%00Adobe%20ImageReadyq%C9e%3C%00%00%03%99IDATx%DA%EC%98AKrA%14%86%BBj%A6%9F%11%04R%B9ID%A1%82%16%11n%A4m%8Bh%11%ED%04%D7%FE%8Bh%95%D8%0F%A8e%7F%40%DADT%B4%8FvA%1BA%DA%84%06%ADZ'%95%A9%BD%DF%7D%F10%DF%CDl%E6*%1F%08s%16r%EF8%F7%CEs%DFsf%CE%99q2%99%CC%C48X%60bL%CC%82ZP%0BjA-%A8%05%B5%A0%16%D4%82%9AXh%24o%E9v%BB%03%FEu%1Cg%04%A0%C3%BCE%F8%F0%92%9FX%D5%F7%0F3V(%18%0C%0EC%A9%FE%AA%ED%C2%E4%B8%26-%BEY%FD%80z%10%85%D2s%ED%7C%B3apC0%7F%94b%9DN%07-%CB%CB%CB%F9%7C~cc%23%99L%E2%B6%D1h%DC%DE%DEV*%95%87%87%07%60%05%02%81%BE%C4%FA%E6d%B3YSP%B1v%BB%0D%CAp8%BC%BF%BF%BF%B3%B3%F3%F1%F1%D1j%B5%C8%0D%B2%C9%C9I%FCu~~~pp%80%BF%D0%02%EFyp%0D%40s%B9%9C%0F%CA%8Ek%00%85CNNNVVV%DE%DE%DE%FA%3E%12%89Dj%B5Z%B1X%FC%FC%FC%04h%C05%1F%AC%C1t%3A%1D41%19%86%DC%7B%7B%7Bp%F7%FB%FB%BB%F3%83%E1c%12%89%C4%FC%FC%FC%CD%CDM%C85%BC%24%D43%FDqCp%90%91%9C%14%12%B7%B8XZZ%DA%DD%DD%7D%7D%7D%1D%AC%0D%3E%03%DDNOO%1F%1F%1F%19%00%9E%0F%D6%9ALSSS%FA%A0%A4%C4%18%04-%14%0A%08J%9D%C1%D0%0D%9D%CB%E52%10!%8D%CA%AA%0B%8Ax%D7%EC%CA%B8%E4%DBq%81%98%5B%5B%5Bc%8B%CE%B3%EB%EB%EBxP%FC.%F1%3AbP%99%E6LB%1Cfaa%01%B8%9A%AA%CC%CD%CD%89%DF%85U%DF%FB%06%A0%22'%AE%C1G1%8Cf.%25%04%22%BC%2F%A2%EA%82j%C6(A%A9%1F%A5E%D8%BD%BC%BC%C4%E3%F1%C1%15%89%24Rtf%80%8A%81%D5%00%D4%B7%A2%18%E6%FE%FE~kk%8B%2B%FC%AFZ%A23%3D%CED%F0%3F%40)-F%3A%3B%3B%DB%DE%DE%D6Q%14%0F%A2%B3h%E9%07%D4%C8%F5%8C*%DE%C2%FB%F5z%FD%EA%EA%0A%AC%83E%C5%23%E8%86%CE%D3%D3%D3%11%D70%A81%A8%FE%82%CF%15%94%AE%E7%82%0A%5D%8F%8E%8E%16%17%17WWW%07%D4%A3%D5j%15%DD%041%EC%9A%AC%A6%BA)tssS3s%AA%E9Dd%00%EB%F5%F5%F5%EC%EC%2C%B2%94T%9Fb%E8%7FyyY*%95%20%5E%2C%16%FB%E3%9A%E0%92U3%91%3A%87%87%87F%F9%13d%98%EF%C8%8A%A8B%9A%CD%26%F2g%D3%B5T*%85%18%40-%06%81%D1%FF%E9%E9%E9%EE%EE%EE%E2%E2%02%F5%1E%F9%08%FA%DD%EF%23v%3D%3D%CB0U%8B%20*%8DQ%9F%9F%9F%8F%8F%8F%3De%1E%98fff%A2%D1(%10%A3%AEQKYD%F5Wb%83%C2%99%A2%06%FE5RblH%85%A2%13z%0B(%DBA%16%E9%99Ji%94%96%CC%B6%22%14U%82U(%A9%1C%ABf%96%D2%D2%8D%2B%11qeI%A2%D3M%13%9B%D9%9E%89%8ArA%95%AC%8D%E1%5B%AE%B5%5D%93%CD%1D%3B%A8yH%ADEL%0Bg%E3%ED%B2%3A%A3%05%17%1C%ED%9Ey%40%E5%7B%C4%DD%B2v%9A%81%9ARr%7B%89%C1%04%88%1A%13%11%17j%3Bq%D5%98%F6%BD%B93%3E)%11VUZ%16~%EA%8EY%80%04NMB~%B6%CB%3E%CE%02d%C3D%C1d%E5%EA%7B%00%E1%994%FE%0F%20%7C%9F%B1%A8%B8%7FS%DCo%93r%C8%13%A8a%0F%C9Fr%00f%CFG-%A8%05%B5%A0%16%D4%82%8E%1F%E8%97%00%03%00%2CK3%C0%95%A6%DFv%00%00%00%00IEND%AEB%60%82") no-repeat center center;
       -webkit-background-size: 28px 28px;
     }
+
+div.icon                         { position: relative; width:16px; height:16px; }
+.icon-hover { 
+        border-radius: 3px;
+        background: #0066ff; 
+        background: -moz-linear-gradient(top, #6ca6d8 0%, #1e6cb4 100%); 
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#6ca6d8), color-stop(100%,#1e6cb4)); 
+        color: #fff; 
+        text-shadow: 0 1px 0 #333; 
+}
+
+.icon-unordered-list-line-1   { background-color: #616161; width: 12px; height: 1px; border-bottom: 1px solid #b3b3b3; position: absolute; bottom: 13px; left: 4px; }
+.icon-unordered-list-bullet-1 { width: 2px; height: 2px; border-radius: 2px; background-color: #4284d3; border-bottom: 1px solid #b3b3b3; position: absolute; bottom: 13px; left: 0px; }
+.icon-unordered-list-line-2   { background-color: #616161; width: 10px; height: 1px; border-bottom: 1px solid #b3b3b3; position: absolute; bottom: 8px; left: 4px; }
+.icon-unordered-list-bullet-2 { width: 2px; height: 2px; border-radius: 2px; background-color: #4284d3; border-bottom: 1px solid #b3b3b3; position: absolute; bottom: 8px; left: 0px; }
+.icon-unordered-list-line-3   { background-color: #616161; width: 12px; height: 1px; border-bottom: 1px solid #b3b3b3; position: absolute; bottom: 3px; left: 4px; }
+.icon-unordered-list-bullet-3 { width: 2px; height: 2px; border-radius: 2px; background-color: #4284d3; border-bottom: 1px solid #b3b3b3; position: absolute; bottom: 3px; left: 0px; }
+
+.icon-ordered-list-line-1     { background-color: #616161; width: 12px; height: 1px; border-bottom: 1px solid #b3b3b3; position: absolute; bottom: 13px; left: 5px; }
+.icon-ordered-list-bullet-1   { position: absolute; bottom: 12px; left: -.5px; font-size: 5px; color: #4284d3; font-weight: bold; }
+.icon-ordered-list-line-2     { background-color: #616161; width: 10px; height: 1px; border-bottom: 1px solid #b3b3b3; position: absolute; bottom: 8px; left: 5px; }
+.icon-ordered-list-bullet-2   { position: absolute; bottom: 7px; left: 0px; font-size: 5px; color: #4284d3; font-weight: bold; }
+.icon-ordered-list-line-3     { background-color: #616161; width: 12px; height: 1px; border-bottom: 1px solid #b3b3b3; position: absolute; bottom: 3px; left: 5px; }
+.icon-ordered-list-bullet-3   { position: absolute; bottom: 1px; left: 0px; font-size: 5px; color: #4284d3; font-weight: bold; }
+
+
+.icon-increase-font-text      { position: absolute; bottom: 0px; left: 0px; font-size: 16px; color: #222; font-family: Georgia; }
+.icon-increase-font-arrow     { border: 3.5px solid #4284d3; border-left-color: transparent; border-right-color: transparent; border-top-color: transparent; height: 0; width: 0; position: absolute; top: 4px; left: 12px; }
+
+.icon-decrease-font-text      { position: absolute; bottom: 0px; left: 0px; font-size: 16px; color: #222; font-family: Georgia; }
+.icon-decrease-font-arrow     { border: 3.5px solid #4284d3; border-left-color: transparent; border-right-color: transparent; border-bottom-color: transparent; height: 0; width: 0; position: absolute; top: 7px; left: 12px; }
+
+.icon-colors div        { float: left; width: 4px; height: 4px; margin-left: 1px; margin-bottom: 1px; border-radius: 2px; }
+.icon-colors-1          { background-color: #f88b00; }
+.icon-colors-2          { background-color: #f800f6; }
+.icon-colors-3          { background-color: #0000f8; }
+.icon-colors-4          { background-color: #f80000; }
+.icon-colors-5          { background-color: #4c4c4c; }
+.icon-colors-6          { background-color: #005689; }
+.icon-colors-7          { background-color: #d2d2d2; }
+.icon-colors-8          { background-color: #a43800; }
+.icon-colors-9          { background-color: #999; }
