--- a/views/new.jade
+++ b/views/new.jade
@@ -1,4 +1,4 @@
-input.data-field(type="hidden", data-name="id")
+input#current-note-id.data-field(type="hidden", data-name="id")
 h1.data-field#titletext.Empty(contenteditable="true", data-name="title") New Title
 span.data-field#datetext.date(contenteditable="true", data-name="date")=date
 span.data-field#timetext.time(contenteditable="true", data-name="time")=time
