lots of changes

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -39,7 +39,7 @@ html
           .shr_box4
     ul#file-menu(class="menu-list", style="display:none")
       li
-        a(href="/new") New
+        a(href="#") New
       li
         a(href="#") Save
     ul#edit-menu(class="menu-list", style="display:none")
