--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -49,7 +49,6 @@ sub {
   position: fixed;
   height: 100%;
   background: #eee;
-  display: none;
   top: 46px;
   left: 0;
   z-index: 98;
@@ -83,12 +82,31 @@ sub {
 #nav * {
   color: #222;
 }
+#nav ul > li {
+  padding: 3px 5px 4px 5px;
+  margin: 2px 0;
+  font-size: 12px;
+  text-shadow: #fff 0 1px 0;
+  cursor: default;
+  text-offset: 5px;
+  font-family: "Helvetica Neue";
+}
 #nav ul > li a {
   color: #738298;
-  font-family: Arial;
   font-weight: bold;
-  padding-left: 12px;
-  background: url("/images/arrow-left.jpg") 0 1px no-repeat;
+  margin: -1px 5px 0 0;
+  position: relative;
+  top: -1px;
+  font: 13px "Helvetica Neue";
+  visibility: hidden;
+  cursor: pointer;
+}
+#nav ul > li:hover a {
+  visibility: visible;
+  opacity: 0.8;
+}
+#nav ul > li.active:hover a {
+  visibility: hidden;
 }
 #bar li {
   float: left;
@@ -113,7 +131,7 @@ section#bar .icon {
   float: right;
 }
 section#nav .contents {
-  padding: 5px 10px;
+  padding: 10px 0 0 0;
 }
 section * {
   list-style: none;
@@ -159,7 +177,8 @@ hr {
   background: url("/images/icons/tag_white.png") 2px 3px no-repeat;
 }
 #bar a.active,
-#bar .active .text {
+#bar .active .text,
+#nav ul li.active {
   background: #06f;
   background: -moz-linear-gradient(top, #6ca6d8 0%, #1e6cb4 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #6ca6d8), color-stop(100%, #1e6cb4));
