--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -63,7 +63,7 @@ h1 sup,sub
   position fixed
   height: 100%
   background #eeeeee //#dee3e8 // #dee4ea
-  display none
+  // display none
   //background #555 //#E5E5E5
   //background -webkit-gradient(linear, left top, right top, color-stop(0%,#555), color-stop(100%,#666))//#e7edf0
   //background -moz-linear-gradient(left, #555 0%, #666 100%)
@@ -103,12 +103,33 @@ h1 sup,sub
 #nav *
   color #222
 
+#nav ul > li
+  padding 3px 5px 4px 5px
+  margin 2px 0
+  font-size 12px
+  text-shadow #fff 0 1px 0
+  cursor default
+  text-offset 5px
+  font-family "Helvetica Neue"
+
+
 #nav ul > li a
   color #738298
-  font-family Arial
   font-weight bold
-  padding-left 12px
-  background url(/images/arrow-left.jpg) 0 1px no-repeat
+  margin -1px 5px 0 0
+  position relative
+  top -1px
+  font 13px "Helvetica Neue"
+  visibility hidden
+  cursor pointer
+
+#nav ul > li:hover a
+  visibility visible
+  //color #fff
+  opacity .8
+
+#nav ul > li.active:hover a
+  visibility hidden
 
 
 #bar li
@@ -136,7 +157,7 @@ section#bar .icon
 
 
 section#nav .contents
-  padding 5px 10px
+  padding 10px 0 0 0
 
 section *
   list-style none
@@ -183,7 +204,7 @@ hr
 .icon.tags.active span
   background url('/images/icons/tag_white.png') 2px 3px no-repeat
 
-#bar a.active, #bar .active .text
+#bar a.active, #bar .active .text, #nav ul li.active
   background #0066ff
   background -moz-linear-gradient(top, #6ca6d8 0%, #1e6cb4 100%)
   background -webkit-gradient(linear, left top, left bottom, color-stop(0%,#6ca6d8), color-stop(100%,#1e6cb4))
