--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -73,10 +73,12 @@ h1 sup,sub
   border 1px solid #b4b4b4
   border-left none
   overflow auto
+  visibility hidden
 
 
 #main
-  //left 180px
+  left 180px
+  visibility hidden
   position relative
   top 26px
   background Transparent
