--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -55,8 +55,11 @@ sub {
   border: 1px solid #b4b4b4;
   border-left: none;
   overflow: auto;
+  visibility: hidden;
 }
 #main {
+  left: 180px;
+  visibility: hidden;
   position: relative;
   top: 26px;
   background: Transparent;
