--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -290,6 +290,11 @@ span.mark.check
 #login.loading label
   visibility hidden
 
+#login div.reg
+  //height 29px
+  padding 0
+#login div.reg *
+  margin-top 5px
 //#signed-in span
 img.gravatar
   margin 0 10px 10px 0
@@ -466,6 +471,15 @@ section .page ol li
   font-size 13px
   margin 0 0 10px
 
+#login .alignright
+  margin-right 20px
+
+.alignright
+  text-align right
+
+.alignleft
+  float left
+  display inline-block
 
 .window .inner p.alignright
   text-align right
