--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,15 +3,15 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    - if(current_user && current_user.theme && (current_user.theme !== 'default'))
+      link(rel='stylesheet', id="current-theme-style", href='/stylesheets/themes/' + current_user.theme + '.css')
     link(rel='stylesheet', href='/stylesheets/box.css')
     link(rel='stylesheet', href='/stylesheets/button.css')
     script(src="/javascripts/lib/requirejs/require-jquery.js", data-main="javascripts/main")
-  body
+  body.theme-dark
     section#nav.boxshadow
       .contents
         ul#notelist
-        //  li.f
-        //    a(href="/category/nomnom") om nom nom..
     section#bar
       .contents
         nav
@@ -33,7 +33,7 @@ html
         
     section#main
       .contents
-        .box4
+        .box4.dark
           div.page!=body
           .shl_box4
           .shr_box4
