--- a/public/stylesheets/button.css
+++ b/public/stylesheets/button.css
@@ -12,23 +12,23 @@ button::-moz-focus-inner {
 button.minimal {
   background: #fff;
   border: 1px solid #bbb;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
-  border-radius: 3px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -o-border-radius: 2px;
+  border-radius: 2px;
   /*-webkit-box-shadow: inset 0 0 1px 1px #f6f6f6;
   -moz-box-shadow: inset 0 0 1px 1px #f6f6f6;
   -ms-box-shadow: inset 0 0 1px 1px #f6f6f6;
   -o-box-shadow: inset 0 0 1px 1px #f6f6f6;
-  box-shadow: inset 0 0 1px 1px #f6f6f6;*/
+  box-shadow: inset 0 0 1px 1px #f6f6f6;
 
-  -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.5);
-  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.5);
-  box-shadow: 0 1px 2px rgba(0,0,0,0.5);
+  -moz-box-shadow: 0 1px 0px rgba(0,0,0,0.7);
+  -webkit-box-shadow: 0 1px 0px rgba(0,0,0,0.7);
+  box-shadow: 0 1px 0px rgba(0,0,0,0.7);*/
 
   color: #333;
-  font: bold 12px "helvetica neue", helvetica, arial, sans-serif;
+  font: bold 11px "helvetica neue", helvetica, arial, sans-serif;
   line-height: 1;
   padding: 7px 17px 8px;
   text-align: center;
@@ -218,3 +218,21 @@ div.icon                         { position: relative; width:16px; height:16px; 
 .icon-colors-7          { background-color: #d2d2d2; }
 .icon-colors-8          { background-color: #a43800; }
 .icon-colors-9          { background-color: #999; }
+
+
+.icon-backgrounds {
+  background-color: #616161;
+  border-radius: 3px;
+  border: 1px solid #444;
+  width: 25px;
+  height: 25px;
+  margin: 10px auto 0 auto;
+}
+.icon-themes {
+  background-color: #616161;
+  border-radius: 3px;
+  border: 1px solid #444;
+  width: 25px;
+  height: 25px;
+  margin: 10px auto 0 auto;
+}
